2017-10-15: Innloggede brukere kan revidere de 10 siste transkripsjonene sine (dugnad)
2017-10-14: Forberedelser til nytt prosjekt – Fossildugnad! (dugnad)
2017-08-06: En del endringer bak forhenget, og et nytt prosjekt – Kartfesting av Karplanter fra Telemark (dugnad)
2017-05-18: Nytt design på forside og prosjektsider (dugnad)
2017-05-10: Oversiktsside for hvert prosjekt (dugnad)
2017-05-04: Økte størrelsen på lokalitetsfeltet (Karplanter Telemark)
2017-05-04: La til to nye felter - høyde over havet og innsamlernummer (Karplanter Telemark)