@@ -1,3 +1,4 @@
+2017-10-16: Screencast-støtte (dugnad)
 2017-10-15: Innloggede brukere kan revidere de 10 siste transkripsjonene sine (dugnad)
 2017-10-14: Forberedelser til nytt prosjekt – Fossildugnad! (dugnad)
 2017-08-06: En del endringer bak forhenget, og et nytt prosjekt – Kartfesting av Karplanter fra Telemark (dugnad)
